WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
237095
[ Mac EWS ] imported/w3c/web-platform-tests/workers/semantics/multiple-workers/004.html is a flaky text failure
https://bugs.webkit.org/show_bug.cgi?id=237095
Summary
[ Mac EWS ] imported/w3c/web-platform-tests/workers/semantics/multiple-worker...
Robert Jenner
Reported
2022-02-23 11:21:59 PST
imported/w3c/web-platform-tests/workers/semantics/multiple-workers/004.html is a flaky text failure on macOS, and is affecting EWS as well. HISTORY:
https://results.webkit.org/?suite=layout-tests&test=imported%2Fw3c%2Fweb-platform-tests%2Fworkers%2Fsemantics%2Fmultiple-workers%2F004.html&platform=mac
LINK TO EWS FAILURE:
https://ews-build.webkit.org/#/builders/60/builds/24663
TEXT DIFF: -PASS shared worker with multiple documents +Harness Error (TIMEOUT), message = null +NOTRUN shared worker with multiple documents + DIFF URL:
https://build.webkit.org/results/Apple-BigSur-Release-AppleSilicon-WK2-Tests/r290366%20(6732)/imported/w3c/web-platform-tests/workers/semantics/multiple-workers/004-pretty-diff.html
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2022-02-23 11:22:25 PST
<
rdar://problem/89367636
>
Robert Jenner
Comment 2
2022-02-23 11:29:18 PST
Added [ Pass Failure ] expectation here to speed up EWS:
https://trac.webkit.org/changeset/290386/webkit
Robert Jenner
Comment 3
2022-02-23 12:18:37 PST
I did attempt to reproduce this failure at Monterey Production ToT. However, I was unsuccessful. I even took it all the way up to 1000 iterations.
Chris Dumez
Comment 4
2022-02-24 09:49:03 PST
I added some logging in <
https://commits.webkit.org/r290439
> to help investigate via the bots since I wasn't able to reproduce locally yet.
youenn fablet
Comment 5
2022-06-20 05:03:59 PDT
Added logging shows the following: CONSOLE MESSAGE: Error: assert_equals: Worker Message Count expected 3 but got 0 Iframes are being loaded but one of the following hypothesis is probably true: - shared worker might not being executed - shared worker might not be receiving the connect event - MessagePort postMessage sometimes does not work
youenn fablet
Comment 6
2022-06-22 04:59:08 PDT
One possibility is that we delay the connect event until we have a process to run the shared worker. We then fire the connect event for all SharedWorker but we do not respect the order so the first port is related to the iframe SharedWorker instead of the main frame SharedWorker.
youenn fablet
Comment 7
2022-06-22 09:32:35 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/1684
EWS
Comment 8
2022-06-23 05:44:08 PDT
Committed
r295776
(
251781@main
): <
https://commits.webkit.org/251781@main
> Reviewed commits have been landed. Closing PR #1684 and removing active labels.
Simon Fraser (smfr)
Comment 9
2022-06-23 17:50:21 PDT
This test is crashing in EWS:
https://results.webkit.org/?suite=layout-tests&test=imported%2Fw3c%2Fweb-platform-tests%2Fworkers%2Fshared-worker-parse-error-failure.html
https://ews-build.s3-us-west-2.amazonaws.com/macOS-AppleSilicon-Big-Sur-Debug-WK2-Tests-EWS/e9afac16-33487/results.html
youenn fablet
Comment 10
2022-06-24 00:37:19 PDT
Added test is also flaky (fix available at
https://bugs.webkit.org/show_bug.cgi?id=241957
). Given I will not be able to fix it very soon, let's revert this change for now in
https://bugs.webkit.org/show_bug.cgi?id=241958
.
youenn fablet
Comment 11
2022-06-24 00:39:17 PDT
Reopening to fix the debug assertion and flaky test
youenn fablet
Comment 12
2022-06-24 00:39:51 PDT
***
Bug 241957
has been marked as a duplicate of this bug. ***
youenn fablet
Comment 13
2022-07-04 05:57:02 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/2054
EWS
Comment 14
2022-07-08 03:03:48 PDT
Committed
252267@main
(82a9cba78565): <
https://commits.webkit.org/252267@main
> Reviewed commits have been landed. Closing PR #2054 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug